# Rarsv2

./: .justfile  Cargo.toml  config.toml
config/: rars.json5  rars.ron
rars_config_utils/: Cargo.toml
services/battery/: Cargo.toml
services/battery/src/: device.rs  lib.rs  upower.rs
services/notification/: Cargo.toml
services/notification/src/: lib.rs  notification.rs  notification_dbus.rs  notificationd.rs
src/: cli.rs  main.rs  themes.rs  widgets.rs
src/bar/: mod.rs
src/bar/modules/: battery.rs  clock.rs  date_time.rs  hyprland.rs  mod.rs
src/config/: bar_conf.rs  mod.rs  theme.rs  utils.rs
src/widgets/: mod.rs  svg.rs
