[package]
name = "rarsv2"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
fnv = "1.0.7"
iced = { version = "0.13.1", features = ["advanced", "tokio"] }
iced_layershell = { git = "https://github.com/waycrate/exwlshelleventloop.git", branch = "master" }
indexmap = "2.7.0"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
iced_anim = "0.1.4"
ron = "0.8.1"
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2.0.9"
file-guard = "0.2.0"
clap = { version = "4.5.23", features = ["derive"] }
nix = { version = "0.29.0", features = ["signal"] }

notification = { path = "services/notification" }
battery = { path = "services/battery" }

lazy_static = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }

[workspace.dependencies]
lazy_static = "1.5.0"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
futures = "0.3.31"

[workspace]
members = [
  "rars_config_utils",
  "services/battery",
  "services/notification",
  "services/battery",
]
